--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -7,29 +7,30 @@
     "file": "_app/immutable/assets/_layout-569289f5.css",
     "src": "src/routes/+layout.css"
   },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-e42be47c.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
+  "_shared-23917130.js": {
+    "file": "_app/immutable/chunks/shared-23917130.js"
+  },
+  "_singletons-bdb35b58.js": {
+    "file": "_app/immutable/chunks/singletons-bdb35b58.js",
     "imports": [
       "_index-eba7a415.js",
-      "_singletons-9a79903e.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-5bfe771d.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+      "_shared-23917130.js"
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-192bd6a9.js",
+    "file": "_app/immutable/chunks/2-af532408.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "_app/immutable/chunks/1-b684396b.js",
+    "src": ".svelte-kit/generated/nodes/1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
   "src/routes/+layout.js": {
@@ -40,11 +41,8 @@
       "__layout-da46b06b.js"
     ]
   },
-  "_singletons-9a79903e.js": {
-    "file": "_app/immutable/chunks/singletons-9a79903e.js",
-    "imports": [
-      "_index-eba7a415.js"
-    ]
+  "__layout-da46b06b.js": {
+    "file": "_app/immutable/chunks/_layout-da46b06b.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
     "file": "_app/immutable/chunks/0-30345be4.js",
@@ -55,19 +53,26 @@
       "src/routes/+layout.svelte"
     ]
   },
-  "__layout-da46b06b.js": {
-    "file": "_app/immutable/chunks/_layout-da46b06b.js"
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-75bacbed.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-eba7a415.js",
+      "_singletons-bdb35b58.js"
+    ]
   },
   "_index-eba7a415.js": {
     "file": "_app/immutable/chunks/index-eba7a415.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-90bda2bc.js",
+    "file": "_app/immutable/start-654820b8.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-eba7a415.js",
-      "_singletons-9a79903e.js"
+      "_singletons-bdb35b58.js",
+      "_shared-23917130.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -76,11 +81,12 @@
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-37f53ac6.js",
+    "file": "_app/immutable/components/pages/_page.svelte-9c051b09.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-eba7a415.js"
+      "_index-eba7a415.js",
+      "_shared-23917130.js"
     ],
     "css": [
       "_app/immutable/assets/_page-c7207fa5.css"
