--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "vite build && npm run build:tailwind",
+		"build:tailwind": "npx tailwindcss -i ./src/app.css -o ./build/app.css",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"deploy": "node ./gh-pages.js"
+		"deploy": "npm run build && touch build/.nojekyll && node ./gh-pages.js"
 	},
 	"devDependencies": {
 		"@popperjs/core": "^2.11.6",
