--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && npm run build:tailwind",
+		"build": "vite build",
 		"build:tailwind": "npx tailwindcss -i ./src/app.css -o ./build/app.css",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
